# lancy

./: .gitignore  .graphifyignore  ARCHITECTURE.md  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  DESIGN_DOC_Image_Retrieval.md  DESIGN_DOC_KB_Analytics.md  DESIGN_DOC_Retrieval_Explorer.md  LICENSE  README.md  pyproject.toml  requirements.txt  start.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
backend/: README.md  pyproject.toml
backend/src/lancy/: admin_router.py  auth_router.py  branding_router.py  database.py  feature0_baseline_rag.py  ingestion.py  kb_pool.py  kb_router.py  kb_stats.py  llm_debug.py  logging_config.py  main.py  openai_compat_router.py  rag_router.py
backend/src/lancy/seeds/: presets.json
backend/src/lancy/utils/: json.py
conversational-toolkit/: pyproject.toml
docs/: API_Endpoints.md  ARCHITECTURE.md  CODEBASE.md  DESIGN_DOC_Admin_Role_Separation.md  DESIGN_DOC_Image_Captioning.md  DESIGN_DOC_Ingestion_Duplication.md  DESIGN_DOC_Ingestion_File_By_File.md  DESIGN_DOC_Multi_KB_Concurrent.md  DESIGN_DOC_SSO_AD_Integration.md  TECH.md
docs/admin-guides/: 01-deployment.md  02-document-ingestion.md  03-API-endpoints.md  deployment.md  (+4 more)
frontend/: .env.example  README.md  next.config.mjs  package-lock.json  package.json
prompts/: image_captioning_prompt.default.md  system_prompt.default.md
scripts/: inspect_images.py  install-backend.sh  spark-install.sh  start-backend.sh  start-frontend.sh  start.sh  stop-backend.sh  stop-frontend.sh  stop.sh  upload-docs.sh
(+101 files in other folders)
